fix: col img (padding), the max-width, header overflow

--- a/style.css
+++ b/style.css
@@ -21,14 +21,11 @@ body{
 }
 
 .container{
-    max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 15px;
 }
 
 .container-large{
-    max-width: 1400px;
     display: flex;
 }
 
@@ -42,7 +39,8 @@ body{
 }
 
 .col-img{
-    width: calc(100% / 6 - 16px);
+    width: calc(100% / 6);
+    padding: 5px;
 }
 
 .col-img img{
@@ -118,11 +116,6 @@ header::-webkit-scrollbar{
     display: none;
 }
 
-header:hover{
-    overflow-y: scroll;
-    transition-duration: 0.7s;
-}
-
 .logo{
     padding: 25px 0;
     padding-left: 20px;
@@ -195,7 +188,9 @@ header:hover{
 }
 
 .header-top{
-    height: calc(100vh - 80px);
+    height: calc(100% - 70px);
+    flex-grow: 1;
+    overflow: auto;
 }
 
 .header-top li{
@@ -203,7 +198,7 @@ header:hover{
 }
 
 .header-bottom{
-    height: 80px;
+    height: 70px;
     margin-left: 20px;
 }
 
